@@ -14,6 +14,7 @@ Option added to customize pagination with "Showing results x-y of z" - ADDED
 WPML custom posts slug translation not working with GD (requires CPT and Event addon update also) - FIXED
 WPML popular post view rating on details page all the same as main post - FIXED
 Import Export is now compatible with WPML - FIXED
+Popular post widget set to use "All" if no category selected - CHANGED
 
 v1.4.9
 Google Analytics extra error messages added to help users debug - ADDED
